# hw06-amichaelsen

./: .buildinfo  .gitignore  Makefile  README.html  _config.yml  _toc.yml  conf.py  genindex.html  hw06-description.html  index.html  index.ipynb  search.html  searchindex.js  setup.cfg
.doctrees/: README.doctree  environment.pickle  hw06-description.doctree  index.doctree
.doctrees/.pytest_cache/: README.doctree
.github/workflows/: book.yml
.pytest_cache/: README.html
_build/html/: .buildinfo  README.html  genindex.html
_build/html/.doctrees/: environment.pickle
_build/html/_sources/: README.md  index.ipynb
_build/jupyter_execute/: index.ipynb  index.py
_sources/: index.ipynb
ligotools/: readligo.py  utils.py
ligotools/tests/: test_readligo.py  test_utils.py
