# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = ligotools
author           = Ligo Scientific Collaboration (LSC) and Anya Michaelsen
author_email     = anya.michaelsen2@gmail.com
description      = A package of LIGO tools and analysis code
long_description = file: README.md
long_description_content_type = text/markdown
keywords         = LIGO, ligo, blackhole

[options]
include_package_data = True
packages = find:
python_requires  = >=2.7, <3,

